<resources>
    <string name="app_name">PersonalFinance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Personal Finance</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Home -->
    <string name="home_accounts">Accounts</string>
    <string name="home_expenses">Expenses</string>
    <string name="home_incomes">Incomes</string>

    <!-- Account -->
    <string name="menu_accounts">Account</string>
    <string name="description_account">Account description</string>
    <string name="form_account_name">Account name</string>
    <string name="form_account_initial_balance">Initial balance</string>
    <string name="form_account_current_balance">Current balance</string>
    <string name="form_account_add_button">Add New Account</string>
    <string name="form_account_save_button">Save Account</string>
    <string name="form_account_save_msg">Account successfully saved</string>
    <string name="form_account_save_error">Failed to save account</string>
    <string name="form_account_required_field">Account name and initial balance is required</string>
    <string name="account_delete">Account successfully deleted</string>
    <string name="account_delete_error">Failed to delete the account, check that there are no transactions or transfers using this account. </string>

    <!-- Categories -->
    <string name="menu_categories">Categories</string>
    <string name="description_categories">Categories description</string>
    <string name="form_category_name">Category name</string>
    <string name="form_category_type">Category type</string>
    <string name="form_category_income">Income</string>
    <string name="form_category_expense">Expense</string>
    <string name="form_category_add_button">Add new Category</string>
    <string name="form_category_save_button">Save Category</string>
    <string name="form_category_save_msg">Category successfully created</string>
    <string name="form_category_save_error">Category creation failed</string>
    <string name="category_delete">Category successfully deleted</string>
    <string name="category_delete_error">Failed to delete the category, check that there are no transactions using this category. </string>

    <!-- Transactions -->
    <string name="menu_transactions">Transactions</string>
    <string name="form_transaction_account">Account</string>
    <string name="form_transaction_category">Category</string>
    <string name="form_transaction_from">From</string>
    <string name="form_transaction_to">To</string>
    <string name="form_transaction_description">Transactions description</string>
    <string name="form_transaction_date">Date</string>
    <string name="form_transaction_amount">Amount</string>
    <string name="form_transaction_save_button">Save</string>
    <string name="form_transaction_save_msg">Transaction successfully created</string>
    <string name="form_transaction_save_error">Transaction creation failed</string>
    <string name="form_transaction_required_field">Amount and data is required</string>

    <!-- Incomes -->
    <string name="menu_incomes">Incomes</string>
    <string name="form_income_add_button">Add New Income</string>
    <string name="income_insert">Income successfully created</string>
    <string name="income_delete">Income successfully deleted</string>
    <string name="income_delete_error">Failed to delete the income, check that there are no transactions using this income. </string>


    <!-- Expenses -->
    <string name="menu_expenses">Expenses</string>
    <string name="form_expense_add_button">Add New Expense</string>
    <string name="expense_insert">Expense successfully created</string>
    <string name="expense_delete">Expense successfully deleted</string>
    <string name="expense_delete_error">Failed to delete the expense, check that there are no transactions using this expense. </string>

    <!-- Transfers -->
    <string name="menu_transfers">Transfers</string>
    <string name="form_transfer_add_button">Add New Transfer</string>
    <string name="form_transfer_from_same_account">From and To account cannot be the same</string>
    <string name="transfer_insert">Transfer successfully created</string>
    <string name="transfer_delete">Transfer successfully deleted</string>
    <string name="transfer_delete_error">Failed to delete the transfer, check that there are no transactions using this transfer. </string>

    <!-- transactions -->
    <string name="transactions_insert_error">Failed to create this transaction</string>

    <!-- Settings -->
    <string name="menu_settings">Settings</string>

    <string name="income">Income</string>
    <string name="expense">Expense</string>

</resources>