<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="app.personalfinance.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_incomes"
        android:name="app.personalfinance.ui.incomes.IncomesFragment"
        android:label="@string/menu_incomes"
        tools:layout="@layout/fragment_incomes" />

    <fragment
        android:id="@+id/nav_expenses"
        android:name="app.personalfinance.ui.expenses.ExpensesFragment"
        android:label="@string/menu_expenses"
        tools:layout="@layout/fragment_expenses" />

    <fragment
        android:id="@+id/nav_transfers"
        android:name="app.personalfinance.ui.transfers.TransfersFragment"
        android:label="@string/menu_transfers"
        tools:layout="@layout/fragment_transfers" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="app.personalfinance.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_categories"
            app:destination="@id/nav_categories" />
        <action
            android:id="@+id/action_settings_to_accounts"
            app:destination="@id/nav_accounts" />

    </fragment>
    <fragment
        android:id="@+id/nav_transactions"
        android:name="app.personalfinance.ui.transactions.TransactionsFragment"
        android:label="@string/menu_transactions"
        tools:layout="@layout/fragment_transactions" />
    <fragment
        android:id="@+id/nav_accounts"
        android:name="app.personalfinance.ui.accounts.AccountsFragment"
        android:label="@string/menu_accounts"
        tools:layout="@layout/fragment_accounts">
        <action
            android:id="@+id/action_accounts_to_transactions"
            app:destination="@id/nav_transactions" />
        <action
            android:id="@+id/action_accountsFragment_to_formAccountsFragment"
            app:destination="@id/nav_form_accounts" />
    </fragment>
    <fragment
        android:id="@+id/nav_categories"
        android:name="app.personalfinance.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories">
        <action
            android:id="@+id/action_categories_to_transactions"
            app:destination="@id/nav_transactions" />
    </fragment>

    <fragment
        android:id="@+id/nav_form_accounts"
        android:name="app.personalfinance.ui.accounts.FormAccountsFragment"
        android:label="Form Accounts"
        tools:layout="@layout/fragment_form_accounts">
        <action
            android:id="@+id/action_formAccountsFragment_to_accountsFragment"
            app:destination="@id/nav_accounts" />
    </fragment>

</navigation>