<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/form_category_name" />


    <RadioGroup
        android:id="@+id/radioGroupCategoryType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewCategoryType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:text="@string/form_category_type" />

        <RadioButton
            android:id="@+id/radioButtonCategoryIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_category_income" />

        <RadioButton
            android:id="@+id/radioButtonCategoryExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_category_expense" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSaveCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_category_save_button" />

</LinearLayout>