<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextAccountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/form_account_name" />

    <EditText
        android:id="@+id/editTextAccountBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/form_account_initial_balance" />

    <Button
        android:id="@+id/buttonSaveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_account_add_button" />
</LinearLayout>