<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/home_accounts" />

    <ImageView
        android:id="@+id/imageViewHomeNoAccount"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/image_no_account" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAccounts"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/home_expenses" />

    <include
        layout="@layout/component_pie_expenses_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/home_incomes" />

    <include
        layout="@layout/component_pie_incomes_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>